# TestableLibrary

./: .gitignore  CMakeLists.txt  TestableLibrary.sublime-project
lib/: CMakeLists.txt  multiplier.cpp  multiplier.h
tests/: CMakeLists.txt  common_tests.cpp  multiplier_tests.cpp
